k8s/base/network-policies/accounting-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: accounting-policy
spec:
  podSelector:
    matchLabels:
      app: accounting
  policyTypes:
    - Ingress
    - Egress
  ingress: []    # no one calls accounting directly
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: kafka
      ports:
        - port: 9092
    - to:
        - podSelector:
            matchLabels:
              app: postgres
      ports:
        - port: 5432
