k8s/base/network-policies/ad-service-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ad-service-policy
spec:
  podSelector:
    matchLabels:
      app: ad-service
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: frontend
      ports:
        - port: 9099
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: flagd
      ports:
        - port: 8013
