k8s/base/network-policies/cart-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: cart-policy
spec:
  podSelector:
    matchLabels:
      app: cart
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: frontend
      ports:
        - port: 8080
    - from:
        - podSelector:
            matchLabels:
              app: checkout
      ports:
        - port: 8080
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: valkey
      ports:
        - port: 6379
    - to:
        - podSelector:
            matchLabels:
              app: flagd
      ports:
        - port: 8013
