k8s/base/network-policies/currency-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: currency-policy
spec:
  podSelector:
    matchLabels:
      app: currency
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: frontend
      ports:
        - port: 7001
    - from:
        - podSelector:
            matchLabels:
              app: checkout
      ports:
        - port: 7001
  egress: []
