k8s/base/network-policies/email-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: email-policy
spec:
  podSelector:
    matchLabels:
      app: email
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: checkout
      ports:
        - port: 6060
  egress: []
