k8s/base/network-policies/flagd-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: flagd-policy
spec:
  podSelector:
    matchLabels:
      app: flagd
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: frontend-proxy
      ports:
        - port: 8013
        - port: 8016
    - from:
        - podSelector:
            matchLabels:
              app: ad-service
      ports:
        - port: 8013
    - from:
        - podSelector:
            matchLabels:
              app: cart
      ports:
        - port: 8013
    - from:
        - podSelector:
            matchLabels:
              app: checkout
      ports:
        - port: 8013
    - from:
        - podSelector:
            matchLabels:
              app: payment
      ports:
        - port: 8013
    - from:
        - podSelector:
            matchLabels:
              app: product-catalog
      ports:
        - port: 8013
    - from:
        - podSelector:
            matchLabels:
              app: recommendation-service
      ports:
        - port: 8013
    - from:
        - podSelector:
            matchLabels:
              app: fraud-detection
      ports:
        - port: 8013
    - from:
        - podSelector:
            matchLabels:
              app: product-reviews
      ports:
        - port: 8013
    - from:
        - podSelector:
            matchLabels:
              app: flagd-ui
      ports:
        - port: 8016
  egress: []
