k8s/base/network-policies/flagd-ui-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: flagd-ui-policy
spec:
  podSelector:
    matchLabels:
      app: flagd-ui
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: frontend-proxy
      ports:
        - port: 4000
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: flagd
      ports:
        - port: 8016
