k8s/base/network-policies/frontend-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: frontend-policy
spec:
  podSelector:
    matchLabels:
      app: frontend
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: frontend-proxy
      ports:
        - port: 8080
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: ad-service
      ports:
        - port: 9099
    - to:
        - podSelector:
            matchLabels:
              app: cart
      ports:
        - port: 8080
    - to:
        - podSelector:
            matchLabels:
              app: checkout
      ports:
        - port: 5050
    - to:
        - podSelector:
            matchLabels:
              app: currency
      ports:
        - port: 7001
    - to:
        - podSelector:
            matchLabels:
              app: product-catalog
      ports:
        - port: 8088
    - to:
        - podSelector:
            matchLabels:
              app: recommendation-service
      ports:
        - port: 1010
    - to:
        - podSelector:
            matchLabels:
              app: shipping
      ports:
        - port: 50050
    - to:
        - podSelector:
            matchLabels:
              app: product-reviews
      ports:
        - port: 3551
