k8s/base/network-policies/kafka-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: kafka-policy
spec:
  podSelector:
    matchLabels:
      app: kafka
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: checkout
      ports:
        - port: 9092
    - from:
        - podSelector:
            matchLabels:
              app: fraud-detection
      ports:
        - port: 9092
    - from:
        - podSelector:
            matchLabels:
              app: accounting
      ports:
        - port: 9092
  egress: []   # kafka is a data sink, it doesn't call anyone --- IGNORE ---g
