k8s/base/network-policies/load-generator-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: load-generator-policy
spec:
  podSelector:
    matchLabels:
      app: load-generator
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: frontend-proxy
      ports:
        - port: 8089
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: frontend-proxy
      ports:
        - port: 8080
