k8s/base/network-policies/product-catalog-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: product-catalog-policy
spec:
  podSelector:
    matchLabels:
      app: product-catalog
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: frontend
      ports:
        - port: 8088
    - from:
        - podSelector:
            matchLabels:
              app: recommendation-service
      ports:
        - port: 8088
    - from:
        - podSelector:
            matchLabels:
              app: checkout
      ports:
        - port: 8088
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: flagd
      ports:
        - port: 8013
