k8s/base/network-policies/product-reviews-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: product-reviews-policy
spec:
  podSelector:
    matchLabels:
      app: product-reviews
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: frontend
      ports:
        - port: 3551
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: llm
      ports:
        - port: 8000
    - to:
        - podSelector:
            matchLabels:
              app: postgres
      ports:
        - port: 5432
    - to:
        - podSelector:
            matchLabels:
              app: flagd
      ports:
        - port: 8013
