k8s/base/network-policies/recommendation-service-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: recommendation-service-policy
spec:
  podSelector:
    matchLabels:
      app: recommendation-service
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: frontend
      ports:
        - port: 1010
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: product-catalog
      ports:
        - port: 8088
    - to:
        - podSelector:
            matchLabels:
              app: flagd
      ports:
        - port: 8013
