k8s/base/network-policies/shipping-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: shipping-policy
spec:
  podSelector:
    matchLabels:
      app: shipping
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: frontend
      ports:
        - port: 50050
    - from:
        - podSelector:
            matchLabels:
              app: checkout
      ports:
        - port: 50050
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: quote
      ports:
        - port: 8090
