k8s/base/network-policies/valkey-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: valkey-policy
spec:
  podSelector:
    matchLabels:
      app: valkey
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: cart
      ports:
        - port: 6379
  egress: []
